<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="date_dd_mm_yyyy">Data: dd/mm/yyyy</string>
    <string name="add_task">Adicionar tarefa</string>
    <string name="remove_task">Remover tarefa</string>
    <string name="edit_task">Editar tarefa</string>
    <string name="task_list">Lista de tarefas</string>
    <string name="select_date">Selecionar data</string>
    <string name="finished">Realizada</string>
    <string name="reativar_tarefa">Reativar tarefa</string>
    <string name="detalhes">Detalhes</string>
    <string name="tarefas_excluidas">Tarefas Excluídas</string>
    <string name="task_title_with_status">%1$s %2$s</string>
    <string name="task_reactivated">Tarefa reativada</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="sign_out">Sign Out</string>
    <string name="prioridade">Prioridade</string>
    <string name ="priority_spinner">
        <item value="Alta">Alta</item>
        <item value="Media">Média</item>
        <item value="Baixa">Baixa</item>
    </string>
</resources>