<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_task_mi"
        android:title="@string/add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/deleted_tasks_mi"
        android:title="@string/tarefas_excluidas"
        android:icon="@android:drawable/ic_menu_delete"
        android:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="always" />

    <item
        android:id="@+id/sign_out_mi"
        android:title="@string/sign_out"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="ifRoom" />

</menu>