<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskActivity">

    <include
        android:id="@+id/toolbar_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="title"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="description"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_et" />

    <Button
        android:id="@+id/limit_date_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_et"/>

    <CheckBox
        android:id="@+id/done_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_date_bt"/>

    <EditText
        android:id="@+id/priority_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="priority"
        android:hint="@string/prioridade"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_cb" />



    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_et">

        <Button
            android:id="@+id/cancel_bt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_bt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>